bumped to wala-1.6.0 from 1.5.8